--- a/06-front-basic-github_feature/css/main.css
+++ b/06-front-basic-github_feature/css/main.css
@@ -306,3 +306,55 @@ header .sub-menu li a:hover {
   top: 0;
   left: 0;
 }
+
+.section--feature .tiles {
+  border-top: 1px solid #e5e5e5;
+  border-bottom: 1px solid #e5e5e5;
+}
+.section--feature .tiles .inner {
+  max-width: 1200px;
+}
+/* Float을 사용한 방법 */
+.section--feature .tiles ul {}
+.section--feature .tiles li {
+  max-width: 25%;
+  padding: 34px 24px;
+  float: left;
+  text-align: center;
+  line-height: 1.5;
+  border-right: 1px solid #e5e5e5;
+  box-sizing: border-box;
+}
+/* Grid를 사용한 방법 */
+/*
+  .section--feature .tiles ul {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .section--feature .tiles li {
+    padding: 34px 24px;
+    text-align: center;
+    line-height: 1.5;
+    border-right: 1px solid #e5e5e5;
+    box-sizing: border-box;
+  }
+*/
+.section--feature .tiles li:last-child {
+  border-right: none;
+}
+.section--feature .tiles li img {
+  max-width: 100%;
+  padding: 14px 10% 24px;
+  box-sizing: border-box;
+}
+.section--feature .tiles li h3 {
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+.section--feature .tiles li p {
+  font-size: 14px;
+  color: #767676;
+}
+
+/* WHERE IS GITHUB */
