--- a/06-front-basic-github_feature/css/main.css
+++ b/06-front-basic-github_feature/css/main.css
@@ -358,3 +358,47 @@ header .sub-menu li a:hover {
 }
 
 /* WHERE IS GITHUB */
+.section--where-is .inner {
+  padding-top: 80px;
+}
+#map {
+  width: 100%;
+  height: 400px;
+  margin-top: 40px;
+  border: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: none;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+  box-sizing: border-box;
+}
+
+
+/* PRICING CARD */
+.section--pricing {
+  background: linear-gradient(#f5f5f5, #fff);
+}
+.section--pricing .inner {
+  padding: 80px 0;
+}
+.section--pricing .card {
+  display: flex;
+  border: 1px solid #e5e5e5;
+  border-radius: 6px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
+}
+.section--pricing .card .cell {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 24px;
+}
+.section--pricing .card .cell1 .btn {
+  height: 50px;
+  font-size: 16px;
+}
+.section--pricing .card .cell2 {
+  border-left: 1px solid #e5e5e5;
+  flex: 1;
+  line-height: 1.5;
+  font-size: 22px;
+  font-weight: 300;
+}
