--- a/01-front-basic-github/css/main.css
+++ b/01-front-basic-github/css/main.css
@@ -1,3 +1,4 @@
-body {font-family: 'Roboto', sans-serif;
-    font-size: 100px;
+body{ 
+  font-family: 'Roboto', sans-serif;
+  font-size: 100px;
 }
