--- a/07-front-basic-github_toggle/css/main.css
+++ b/07-front-basic-github_toggle/css/main.css
@@ -13,7 +13,7 @@
     background: #eee linear-gradient(to bottom, #fcfcfc, #eee);
     border: 1px solid #d5d5d5;
     border-radius: 4px;
-    display: flex;/* flex는 블록처럼 가로전체차지, inline-flex;s는 글자크기만큼 가로크기 조절 */
+    display: inline-flex;/* flex는 블록처럼 가로전체차지, inline-flex;s는 글자크기만큼 가로크기 조절 */
     align-items: center; /* *수직 가운데 정렬*/
     padding: 0 12px; /* 가로크기조절을위한방법으로 padding과 display:inline-flex;를 사용 / padding은 위아래 여백은 없고 , 좌우여백만 12px로 설정 */
     font-size: 14px;
@@ -94,20 +94,23 @@ a {
 
 /* SUMMARY */
 .summary{
+
 }
 
-.summary__title {
-  font-size: 38px;
-  font-weight: 300;
-  line-height: 1.25;
-  margin-bottom: 18px;
+.summary__title{
+ font-size: 38px;
+ font-weight: 300;
+ line-height: 1.25;
+ margin-bottom:18px;
 }
-.summary__description {
+
+.summary__description{
   font-size: 26px;
-  font-weight: 300;
-  color: #767676;
+  font-size: 300;
+  color:#767676;
   line-height: 1.5;
 }
+
 
 /* HEADER */
 header {
@@ -199,126 +202,149 @@ header .sub-menu li a:hover {
   color: #4078c0;
 }
 
+#toggle-btn {
+  display: none;
+} 
 
 /* VISUAL */
-.section--visual {
-  /* position: relative; 공통으로 section안에 넣어둠 */
-  background-image: url("../img/bg.jpg");
+.section--visual{
+  background-image: url(../img/bg.jpg);
   background-repeat: no-repeat;
   background-position: bottom left;
   background-size: cover;
+  
 }
 
-.section--visual::before { /* visual 배경사진 어둡게 */
+.section--visual::before{
   content: "";
-  position: absolute;
-  top: 0;
+  position:absolute;
+  top:0;
   right: 0;
-  bottom: 0;  /* width: 100%; 와 동일효과 */
-  left: 0;    /* height: 100%; 와 동일효과 */
-  background: rgba(0, 0, 0, .3);
+  bottom: 0;
+  left: 0;
+  background: rgba(0,0,0, .3);
 }
 
-.section--visual .inner {
-/* .section .inner {} 안에 아래 2개를 공통으로 빼둠
-   max-width: 980px;
-   margin: 0 auto;  visual 글자 가운데로 배치*/
-  padding: 160px 0; /* visual 사진 위아래 안쪽여백 추가해서 늘려줌*/
-  display: flex; 
-} 
+.section--visual .inner{
+
+  padding: 160px 0; /* 배경 이미지 크기 조절 - 안쪽여백 */
+  display: flex;
+}
 
 .section--visual .summary{
-  /* suammary글과 sign-form 영역을 가로 반반정도 배치하기위함
-     아래의 두줄을 flex:1  한줄코드로 변경해도 동일하다 
-  flex-basis: 0;
-  flex-grow: 1; */
-  flex: 1; 
-  /* flex: 0 1 auto; 가 기본값, flex: grow shrink basis 순서인데 
-  flex단축속성쓰는순간 auto는 0으로 변하고
-  여기서는 grow가1이고 shrink도 기본0으로, auto도 단축속성으로0 으로 변해 결국
-   flex: 1 0 0 값으로 변함. --> 이것을 더 줄여서 flex:0; 으로 작성했다. */
-  margin-right: 90px; 
+flex:1;
+margin-right:90px;
 }
 
-.section--visual .summary__title {
+.section--visual .summary__title{
   font-size: 54px;
   color: #fff;
-  /* text-shadow: X Y BLUR COLOR; */
-  text-shadow: 0 1px 1px rgba(0, 0, 0, .25),
-               0 1px 25px rgba(0, 0, 0, .75);
-}
-.section--visual .summary__description {
-  color: #fff;
-  text-shadow: 0 1px 1px rgba(0, 0, 0, .25),
-  0 1px 25px rgba(0, 0, 0, .75);
-}  
+  text-shadow: 0 1px 1px rgba(0,0,0 .25),
+               0 1PX 25PX rgba(0,0,0 .75);
 
-#sign-form {
-  width: 340px;
-  margin-top: 16px;
 }
-#sign-form li {
+
+.section--visual .summary__description{
+  color: #fff;
+  text-shadow: 0 1px 1px rgba(0,0,0 .25),
+               0 1PX 25PX rgba(0,0,0 .75);
+}
+
+#sign-form{
+  width:340px;
+  margin-top: 16px;
+
+}
+
+#sign-form li{
   margin-bottom: 17px;
 }
-#sign-form li:last-child {
-  margin-bottom: 0;
+
+#sign-form li:last-child{
+  margin-bottom: 0px;
 }
-#sign-form .input--text {
-  width: 100%;
-  height: 40px;
+
+#sign-form .input--text{
+  width:100%;
+  height: 40px;;
 }
-#sign-form .caption {
+
+#sign-form .caption{
   font-size: 12px;
   margin-top: 5px;
   color: rgba(255, 255, 255, .6);
   line-height: 1.5;
   text-align: center;
 }
-#sign-form [type="submit"] {
+
+#sign-form [type="submit"]{
   width: 100%;
   height: 62px;
-  padding: 0 25px;
+  padding:0 25px;
   font-size: 20px;
   justify-content: center;
 }
 
 /* FEATURE */
-.section--feature {
+.section--feature{
   background: #f5f5f5;
-  padding-top: 66px;
+  padding-top:66px;
 }
-.section--feature .summary {
+
+.section--feature .summary{
   max-width: 820px;
   margin: 0 auto;
   text-align: center;
 }
-.section--feature .video {
+
+.section--feature .video{
   max-width: 650px;
   margin: 50px auto;
 }
-.section--feature .video .video-ratio {
-  height: 0;
+
+.section--feature .video .video-ratio{
+  height:0;
   padding-top: 56.25%;
   position: relative;
 }
-.section--feature .video .video-ratio iframe {
+
+.section--feature .video .video-ratio iframe{
+  position: absolute;
+  top:0;
+  left:0;
   width: 100%;
   height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
-.section--feature .tiles {
+/* FEATURE 의 tiles */
+.section--feature .tiles{
   border-top: 1px solid #e5e5e5;
   border-bottom: 1px solid #e5e5e5;
 }
+
 .section--feature .tiles .inner {
   max-width: 1200px;
 }
-/* Float을 사용한 방법 */
-.section--feature .tiles ul {}
-.section--feature .tiles li {
+
+/* FEATURE 의 tiles 두가지 방식- 첫번째 grid방식 - 현대적 */
+/* .section--feature .tiles ul{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);  
+ }
+.section--feature .tiles li{
+  padding: 34px 24px;
+  text-align: center;
+  line-height: 1.5;
+  border-right: 1px solid #e5e5e5;
+  box-sizing: border-box;
+
+} */
+
+
+/* FEATURE 의 tiles 두가지 방식- 두번째. float 방식 - 과거 */
+.section--feature .tiles ul{
+ }
+ .section--feature .tiles li{
   max-width: 25%;
   padding: 34px 24px;
   float: left;
@@ -327,111 +353,159 @@ header .sub-menu li a:hover {
   border-right: 1px solid #e5e5e5;
   box-sizing: border-box;
 }
-/* Grid를 사용한 방법 */
-/*
-  .section--feature .tiles ul {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-  }
-  .section--feature .tiles li {
-    padding: 34px 24px;
-    text-align: center;
-    line-height: 1.5;
-    border-right: 1px solid #e5e5e5;
-    box-sizing: border-box;
-  }
-*/
-.section--feature .tiles li:last-child {
-  border-right: none;
+
+
+.section--feature .tiles li:last-child{
+ border-right: none;
 }
-.section--feature .tiles li img {
+
+.section--feature .tiles li img{
   max-width: 100%;
   padding: 14px 10% 24px;
   box-sizing: border-box;
 }
-.section--feature .tiles li h3 {
+
+.section--feature .tiles li h3{
   font-size: 18px;
   font-weight: 500;
   margin-bottom: 10px;
 }
-.section--feature .tiles li p {
+
+.section--feature .tiles li p{
   font-size: 14px;
   color: #767676;
 }
 
 /* WHERE IS GITHUB */
-.section--where-is .inner {
-  padding-top: 80px;
+.section--where-is .inner{
+  padding-top:80px;
+  padding-bottom: 80px;
 }
-#map {
-  width: 100%;
-  height: 400px;
-  margin-top: 40px;
-  border: 1px solid rgba(0, 0, 0, .2);
-  border-bottom: none;
-  box-shadow: 0 0 20px rgba(0, 0, 0, .2);
+
+#map{
+  width:100%;
+  height: 500px;
+  margin-top:40px;
+  border: 1px solid rgba(0,0,0, 0.2);
+  box-shadow: 0 0 20px rgba(0,0,0, 0.2);
   box-sizing: border-box;
 }
 
-
 /* PRICING CARD */
-.section--pricing {
-  background: linear-gradient(#f5f5f5, #fff);
+.section--pricing{
+  background: linear-gradient(#f5f5f5, #fff)
 }
-.section--pricing .inner {
+
+.section--pricing .inner{
   padding: 80px 0;
 }
+
 .section--pricing .card {
   display: flex;
   border: 1px solid #e5e5e5;
   border-radius: 6px;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, .1);
+  box-shadow: 0 1px 1px rgba(0,0,0, .1);
 }
+
 .section--pricing .card .cell {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 24px;
 }
-.section--pricing .card .cell1 .btn {
+
+.section--pricing .card .cell1 .btn{
   height: 50px;
   font-size: 16px;
 }
-.section--pricing .card .cell2 {
+
+.section--pricing .card .cell2{
   border-left: 1px solid #e5e5e5;
-  flex: 1;
+  flex:1;
   line-height: 1.5;
   font-size: 22px;
   font-weight: 300;
 }
 
 
-/* MEDIA , toggle */
-@media (max-width: 1024px) {
-
-  header.section .inner{
-    max-width: none;
-    height: auto;
+/* MEDIA */
+@media(max-width: 1024px){
+  header.section .inner {
+    max-width:none;
+    height:auto;
     padding: 0 20px;
-  }  
-
-  header .sign-group, 
-  header .menu-group{ 
-    float: none;
   }
-  header .toggle{
-    display: none;
-  }
-
-  header .toggle .on{
-    display: block;
+  header .menu-group, 
+  header .sign-group {
+    float:none;
   }
 
   header .logo {
-  padding: 12px;
+    padding: 10px;
   }
 
+  header .menu-group{
+    display: block;
+  }
+  header .main-menu{
+    display: block;
+    margin-bottom: 10px;
+  }
+
+  header .main-menu li{
+  border-top: 1px solid #e5e5e5;
+  }
+
+  header .main-menu li a {
+  padding:16px 0;
+  }
+
+  header .sign-group{
+    display: block;
+    padding: 10px 0 20px;
+  }
+
+  header .btn-group{
+    display: block;
+  }
+
+  header .btn-group .btn{
+    justify-content: center;
+  }
+
+  header .btn-group .sign-in{
+    margin-right: 0;
+    margin-bottom: 12px;
+  }
+
+  #search-form{
+    margin-top: 12px;
+    margin-right: 0;
+  }
+
+  #search {
+    width: 100%;
+    height: 42px;
+    text-align: center; /* 검색창안에 입력한 텍스트 중앙정렬 */
+  }
+
+  header .sub-menu{
+    margin-top: 12px;
+    margin-right: 0; /* 수평일때 들어간 값 0으로 초기화 */
+    justify-content: center;
+  }
+
+  header .toggle{
+    display: none; /* 주의: 442줄에서 이동! - 이유: 상단에 toggle클래스 (main-menu, sign-group)보다 위에 적으면 none이 안먹힘 */
+  }
+
+  header .toggle.on {
+    display: block;
+  }
+  
   #toggle-btn {
+      /* 205줄:  @media 1024 사이즈보다 클때 toggle display:none 안보이게 했는데 */
+    display:block; /*  @media 1024사이즈보다 작으면 보이게  display:block/ flex 등으로 설정   */      
     background: url("../img/toggle-btn.svg");
     width: 18px;
     height: 24px;
@@ -441,58 +515,5 @@ header .sub-menu li a:hover {
     cursor: pointer;
     text-indent: -9999px;
   }
-
-/*  
-   header .menu-group
-  {
-   display: block;
-  }
-  header .main-menu {
-    display: block;
-    margin-bottom: 10px;
-  }
-  header .main-menu li {
-    border-top: 1px solid #e5e5e5;
-  }
-
-  header .main-menu li a {
-    padding: 16px 0;
-
-  }
-  header .sign-group {
-    display: block;
-    padding: 10px 0 20px;
-  }
-  header .btn-group {
-    display: block;
-  } 
-  header .btn-group .btn {
-    justify-content: center;
-  } 
-
-  header .btn-group .sign-in {
-    margin-right: 0;
-    margin-bottom:12px;
-  } 
-
-  #search-form {
-    margin-top:12px;
-    margin-right: 0px;
-  }
-
-  #search {
-    width: 100%;
-    height: 42px;
-    text-align: center;
-  }
-  header .sub-menu {
-    margin-top: 12px;
-    margin-right: 0;
-    justify-content: center;
-  } 
-   */
-} 
-
-
-
+}
 
